# kwantyzacja-skalarna

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  amogus.tga  cmake_install.cmake  dump.tga  functions.c  functions.h  main  main.c  test  test.c
libtga-master/: Makefile  cmake_install.cmake
libtga-master/src/: Makefile  cmake_install.cmake
